--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -538,6 +538,52 @@ body
 
 
 /*------------------------------------*
+	$ HEADER NEW
+*------------------------------------*/
+.am-Header-new
+	display flex
+	justify-content space-between
+	&-left
+		display flex
+		align-items center
+	&-right
+		display flex
+		align-items center
+	.logo
+		max-width 200px
+		margin-right 20px
+		
+	.options
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 13px
+		a
+			color charcoal-grey
+			margin-left 25px
+	.socials
+		margin-left 20px
+		.upload
+			border-radius 4px
+			background #277cea
+			font-family 'Montserrat', sans-serif
+			font-weight bold
+			font-size 11px
+			color white
+			padding 5px
+			letter-spacing 2px
+			margin 0 10px
+	.avatar
+		width 40px
+		height 40px
+		display flex
+		align-items center
+		img
+			border-radius 50%
+			margin-right 2px
+		
+	
+
+/*------------------------------------*
 	$ NAVIGATION MENU
 *------------------------------------*/
 .am-NavigationMenu
