--- a/app/styles/inputs.styl
+++ b/app/styles/inputs.styl
@@ -17,6 +17,26 @@
 		color white
 		cursor pointer
 		font-size 1.35em
+		
+.am-Search-input2
+	border-radius 50px
+	overflow hidden
+	display flex
+	min-width 300px
+	input
+		padding 8px 20px
+		flex 1
+		color #333
+		font-family 'Montserrat', sans-serif
+		border solid 1px #3f3f3f
+		border-radius 50px 0 0 50px
+		font-size 12px
+	i
+		background #333333
+		color white
+		cursor pointer
+		padding 7px 10px
+
 
 .am-Email-input
 	border-radius 4px
