--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -4,90 +4,42 @@
 	********************************************************************* -->
 	<div class="grid-container u-padding-top-15 u-padding-bottom-15" {% if user %} style="padding-top: 10px; padding-bottom: 10px;" {% endif %}>
 		<div class="grid-100">
-			<header class="am-Header">
-				<figure class="am-Header-logo">
-					<a href="/">
-						<img class="large" src="/img/logo.png">
-						<img class="small" src="/img/logo-small.png">
-					</a>
-				</figure>
-				<ul class="am-Header-menu">
-					{% if user %}
-					<li class="am-Header-menu-item">
-						<a class="am-Header-text desktop" href="/feed">
-							<p>ART FEED</p><i class="bi_media-image-b"></i>
-						</a>
-					</li>
-					{% endif %}
-					<li class="am-Header-menu-item">
-						<a class="am-Header-text desktop" href="/collections/category/all/page-1?order=popularity">
-							<!-- <p>COLECCIONES</p><i class="fa fa-heart-o"></i> -->
-							<p>COLECCIONES</p><i class="bi_media-image-b"></i>
-						</a>
-					</li>
-					<li class="am-Header-menu-item">
-						<a class="am-Header-text desktop" href="/users/specialty/all/page-1?order=popularity">
-							<!-- <p>ARTISTAS</p><i class="fa fa-heart-o"></i> -->
-							<p>ARTISTAS</p><i class="bi_interface-heart"></i>
-						</a>
-					</li>
-					<li class="am-Header-menu-item">
-						<a class="am-Header-text desktop" href="/works/category/all/page-1/?order=popularity">
-							<!-- <p>OBRAS</p><i class="fa fa-paint-brush"></i> -->
-							<p>OBRAS</p><i class="bi_editorial-brush"></i>
-						</a>
-					</li>
-					<!-- <li class="am-Header-menu-item">
-						<a class="am-Header-text desktop" href="/products/type/all/page-1?order=popularity">
-							<p>TIENDA</p><i class="fa fa-diamond"></i>
-							<p>TIENDA</p><i class="bi_ecommerce-diamon"></i>
-						</a>
-					</li> -->
-					{% if user %}
-						<li class="am-Header-menu-item upload">
-							<a class="am-Upload-button" href="/user/{{user.username}}/work/add"><i class="fa fa-cloud-upload"></i> SUBIR</a>
-						</li>
-						<li class="am-Header-menu-item" style="padding-left: 10px;">
-							<a href="/user/{{user.username}}/notifications" class="am-Header-icon">
-								<i class="fa fa-bell-o"></i><span>{{numOfNotifications}}</span>
-							</a>
-						</li>
-						<!--<li class="am-Header-menu-item cart">
-							<div class="am-Header-icon">
-								<a href="{{user.url}}/cart"><i class="fa fa-shopping-cart"></i><span>10</span></a>
-							</div>
-						</li>-->
-						<li class="am-Header-menu-item">
-							<!-- <a href="{{user.url}}"> -->
-								<div class="am-Avatar">
-									<img src="{{user.photo}}">&nbsp;<i class="fa fa-caret-down"></i>
-									<div class="user-menu">
-										<a href="/user/{{user.username}}" class="user-menu-item">MI PORTAFOLIO</a>
-										<div class="u-separator"></div>
-										<a href="/user/{{user.username}}/work/add" class="user-menu-item">SUBIR OBRA</a>
-										<div class="u-separator"></div>
-										<a href="/user/{{user.username}}/account" class="user-menu-item">ADMINISTRAR CUENTA</a>
-										<div class="u-separator"></div>
-										<a href="/auth/logout" class="user-menu-item">SALIR</a>
-									</div>
-								</div>
-							<!-- </a> -->
-						</li>
-					{% else %}
-						<li class="am-Header-menu-item">
-							<a class="am-Signin-button">
-								<!-- <i class="fa fa-user"></i> INGRESAR -->
-								<i class="bi_user-single-a"></i> INGRESAR
-							</a>
-						</li>
-					{% endif %}
-				</ul>
+			<header class="am-Header-new">
+				
+				<div class="am-Header-new-left">
+					<img class="logo" src="/img/logo.png">
+					<div class="search">
+
+						<div class="am-Search-input2">
+							<input type="text"/>
+							<i class="bi_interface-search search-btn"></i>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="am-Header-new-right">
+					<ul class="options">
+						<a href="#">ART FEED</a>
+						<a href="#">OBRAS</a>
+						<a href="#">ARTISTAS</a>
+						<a href="#">COLECCIONES</a>
+					</ul>
+
+					<ul class="socials">
+						<a href="#" class="upload">SUBIR</a>
+						<a href="#" class="notif"></a>
+						<a href="#" class="cart"></a>
+					</ul>
+
+					<div class="avatar">
+						<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
+						<i class="fa fa-caret-down"></i>
+					</div>
+				</div>
+				
+
 			</header>
 		</div>
 	</div>
 	<div class="u-separator"></div>
-<!-- <li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">
-							<p>HOME</p>
-						</a>
-					</li> -->
