new account layout

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -557,6 +557,7 @@ body
 		font-family 'Montserrat', sans-serif
 		font-weight bold
 		font-size 13px
+		letter-spacing 1px
 		a
 			color charcoal-grey
 			margin-left 25px
@@ -1899,6 +1900,22 @@ body
 	box-sizing border-box
 	padding-top 30px
 	padding-bottom 30px
+	
+	.separator
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 11px
+		letter-spacing 2px
+		color charcoal-grey
+		display flex
+		align-items center
+		.line
+			background #ddd
+			height 1px
+			flex 1
+		.text
+			padding 0 20px
+			
 	.title
 		font-family 'Montserrat', sans-serif
 		font-size 14px
