--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -11,7 +11,7 @@
 					<div class="search">
 
 						<div class="am-Search-input2">
-							<input type="text"/>
+							<input type="text" placeholder="Busca obras y artistas" />
 							<i class="bi_interface-search search-btn"></i>
 						</div>
 
