--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -15,7 +15,35 @@
 
 		<div class="am-profile-box grid-container">
 			<form class="complete-form">
-				<div class="grid-100">
+
+				<div class="separator">
+					<span class="line"></span><span class="text">ELIGE TU CUENTA</span><span class="line"></span>
+				</div>
+
+				<div class="interests">
+					<div>
+						<input type="checkbox" value='' name="type" id=""/>
+						<label for="type">
+							<div class="interest" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/v1448431745/categories/collage.png')">
+								<div class="cover"><p>No soy artista (todavía)</p></div>
+							</div>
+						</label>
+					</div>
+					<div>
+						<input type="checkbox" value='' name="type" id=""/>
+						<label for="type">
+							<div class="interest" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/v1448431745/categories/collage.png')">
+								<div class="cover"><p>Soy Artista Visual / Creador</p></div>
+							</div>
+						</label>
+					</div>
+				</div>
+
+				<div class="separator">
+					<span class="line"></span><span class="text">DATOS DE USUARIO</span><span class="line"></span>
+				</div>
+
+				<!-- <div class="grid-100">
 					<div class="uploader-profile">
 						<div class="profile-imgage">
 							<div class="preview">
@@ -34,6 +62,14 @@
 					<p class="title">Apellido</p>
 					<input class="input" type="text" value="{{user.lastname}}" name='lastname' required placeholder="Ingresa tus apellidos"/>
 					<p class="title">Usuario en la plataforma</p>
+				</div> -->
+
+				<div class="grid-100">
+					<p class="title">Nombre</p>
+					<input class="input" type="text" value="{{user.firstname}}" name='firstname' required placeholder="Ingresa tus nombres"/>
+					<p class="title">Apellido</p>
+					<input class="input" type="text" value="{{user.lastname}}" name='lastname' required placeholder="Ingresa tus apellidos"/>
+					<p class="title">Elige tu nombre de usuario</p>
 				</div>
 
 				<div class="grid-50 mobile-grid-100">
@@ -76,7 +112,48 @@
 					<input class="input" name='city' value="{{user.city}}" required type="text" placeholder="Ingresa tu ciudad de residencia actual"/>
 				</div>
 
+				<div class="grid-100">
+					<p class="title">Elige tu foto de perfil:</p>
+					<div class="uploader-profile">
+						<div class="profile-imgage">
+							<div class="preview">
+								<img src="{{user.photo}}"/>
+							</div>
+						</div>
+						<div class="preload hide"><i class="fa fa-spinner"></i></div>
+						<button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
+					</div>
+
+					<div class="image-uploader" style="position:relative;">
+						{{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: { style: "width:230px;height:55px;top:-70px;left: 105px;" } })}}
+					</div>
+
+					<p class="title">Elige tus intereses</p>
+				</div>
+
+
+				<div class="interests">
+					{% for category in categories %}
+						<div>
+							<input type="checkbox" value='{{category.id}}' name="interests" id="interest-{{category.id}}"/>
+							<label for="interest-{{category.id}}">
+								<div class="interest" style="background-image: url('{{category.photo|addFilter('w_120,h_120,c_fill')}}')">
+									<div class="cover"><p>{{category.name}}</p></div>
+								</div>
+							</label>
+						</div>
+					{% endfor %}
+				</div>
+
+
+				<div class="separator">
+					<span class="line"></span><span class="text">DATOS ARTISTA</span><span class="line"></span>
+				</div>
+
+
 				<div class="grid-100 mobile-grid-100">
+					<p class="title">Mi Manifiesto</p>
+					<textarea name='biography' rows="7" required class="input" placeholder="Cuentanos sobre tí, lo que te define lo que hace que te levantes cada día.">{{user.biography}}</textarea>
 					<p class="title">Redes Sociales</p>
 					<div class="socials">
 						<div class="social">
@@ -112,23 +189,8 @@
 							<input class="input" name='dribble' value="{{user.dribble}}" type="text" placeholder="Ingresa tu link del perfil en dribble"/>
 						</div>
 					</div>
-					<p class="title">Mi Manifiesto</p>
-					<textarea name='biography' rows="7" required class="input" placeholder="Cuentanos sobre tí, lo que te define lo que hace que te levantes cada día.">{{user.biography}}</textarea>
-					<p class="title">Elige tus intereses</p>
 				</div>
 
-				<div class="interests">
-					{% for category in categories %}
-						<div>
-							<input type="checkbox" value='{{category.id}}' name="interests" id="interest-{{category.id}}"/>
-							<label for="interest-{{category.id}}">
-								<div class="interest" style="background-image: url('{{category.photo|addFilter('w_120,h_120,c_fill')}}')">
-									<div class="cover"><p>{{category.name}}</p></div>
-								</div>
-							</label>
-						</div>
-					{% endfor %}
-				</div>
 				<div class="grid-100 mobile-grid-100">
 					<button class="button save u-margin-top-30" data-color="green">GUARDAR CAMBIOS</button>
 				</div>
