--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -21,9 +21,9 @@
 				<div class="am-Header-new-right">
 					<ul class="options">
 						<a href="#">ART FEED</a>
-						<a href="#">OBRAS</a>
-						<a href="#">ARTISTAS</a>
-						<a href="#">COLECCIONES</a>
+						<a href="/works/category/all/page-1/?order=popularity">OBRAS</a>
+						<a href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a>
+						<a href="/collections/category/all/page-1?order=popularity">COLECCIONES</a>
 					</ul>
 
 					<ul class="socials">
