--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -27,7 +27,7 @@
 					</ul>
 
 					<ul class="socials">
-						<a href="#" class="upload">SUBIR</a>
+						<a href="/user/{{user.username}}/work/add" class="upload">SUBIR</a>
 						<a href="#" class="notif"></a>
 						<a href="#" class="cart"></a>
 					</ul>
@@ -35,6 +35,15 @@
 					<div class="avatar">
 						<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
 						<i class="fa fa-caret-down"></i>
+						<div class="user-menu" style="top: -8px;">
+							<a href="/user/{{user.username}}" class="user-menu-item">MI PORTAFOLIO</a>
+							<div class="u-separator"></div>
+							<a href="/user/{{user.username}}/work/add" class="user-menu-item">SUBIR OBRA</a>
+							<div class="u-separator"></div>
+							<a href="/user/{{user.username}}/account" class="user-menu-item">ADMINISTRAR CUENTA</a>
+							<div class="u-separator"></div>
+							<a href="/auth/logout" class="user-menu-item">SALIR</a>
+						</div>
 					</div>
 				</div>
 				
