add empty feed message

--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -77,6 +77,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="feed-title" style="margin-top: 20px;">
+			<div class="title">Todavía no sigues a nadie, pero te sugerimos a los últimos artistas destacados de AM</div>
+		</div>
 		<div class="feed-inner">
 			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
