--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -3,14 +3,14 @@
 	<div class="am-profile">
 
 		{% if !context %}
-		<div class="single-tabs" style="max-width: 580px; margin: auto;">
+		<!-- <div class="single-tabs" style="max-width: 580px; margin: auto;">
 		  <a href="/user/{{user.username}}/account/" class="single-tab selected" style="padding: 10px;">
 		    <p style="padding: 5px;">DATOS</p>
 		  </a>
 		  <a href="/user/{{user.username}}/account/password" class="single-tab" style="padding: 10px;">
 		    <p style="padding: 5px;">PASSWORD</p>
 		  </a>
-		</div>
+		</div> -->
 		{% endif %}
 
 		<div class="am-profile-box grid-container">
