--- a/app/views/auth/reset.html
+++ b/app/views/auth/reset.html
@@ -8,16 +8,27 @@
 			<img class="logo-text" src="/img/logo-text-black.svg" />
 			<p class="title">Ingresa tu nueva contraseña</p>
 			<br><br><br>
-			<input class="input" type="pasword" placeholder="nuevo password"></input>
-			<br><br>
-			<input class="input" type="pasword" placeholder="repetir password"></input>
-			<br><br>
-			<button class="button u-margin-top-10" data-color="green">
-				<a>GUARDAR NUEVO PASSWORD</a>
-			</button>
-			<!-- <p class="change" style="text-align: right;"><a href="#">Ya Recorde mi Clave</a></p>
-			<br><br><br><br><br><br>
-			<p class="change">¿Aún no tienes una cuenta? <a href="#">Regístrate</a></p> -->
+			<form class="auth-form">
+				<input class="hide" name='token' value="{{token}}">
+				<input class="input" name='password' type="password" placeholder="Nueva contraseña"></input>
+				<br><br>
+				<input class="input" name='confirm_password' type="password" placeholder="Confirmar contraseña"></input>
+				<br><br>
+				<button class="button submit u-margin-top-10" data-color="green">
+					<a>GUARDAR</a>
+				</button>
+				<button class="button submit-loading u-margin-top-10 hide" data-color="green">
+					<a><i class="load fa fa-spinner"></i></a>
+				</button>
+			</form>
 		</div>
 	</div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+	$(function() {
+		new APP.AuthScreen('reset');
+	});
+</script>
 {% endblock %}
