--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -55,7 +55,44 @@
 	</div>
 </div>
 
-	{% block elements %} {% endblock %}
+	<div class="body">
+		<div class="left-menu">
+			<div class="am-Search-input2">
+				<input type="text" placeholder="Busca obras y artistas" />
+				<i class="bi_interface-search search-btn"></i>
+			</div>
+			<table class="options u-margin-top-10">
+				<tr>
+					<td></td>
+					<td><a href="#">ART FEED</a></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><p></p></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><a href="#">ARTISTAS</a></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><a href="#">COLECCIONES</a></td>
+				</tr>
+				<tr>
+					<td><i class="bi_interface-plus"></i></td>
+					<td><a href="#">SUBIR</a></td>
+				</tr>
+				<tr>
+					<td><i class="bi_interface-bell-a"></i></td>
+					<td><a href="#">NOTIFICACIONES <span>29</span></a></td>
+				</tr>
+			</table>
+		</div>
+		<div class="body-inner">
+			<div class="cover"></div>
+			{% block elements %} {% endblock %}
+		</div>
+	</div>
 
 	<!-- <div id="lean_overlay"></div> -->
 
@@ -116,6 +153,11 @@
 
 		$('.close-flash').click(function(event) {
 			$('.flash-message').css('visibility', 'hidden');
+		})
+
+
+		$('.am-header-mobile .bars').click(function () {
+			$('.body').toggleClass('open-left')
 		})
 	});
 	</script>
