--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -56,7 +56,7 @@
 </div>
 
 	<div class="body">
-		<div class="left-menu">
+		<div class="left-mobile-menu">
 			<div class="am-Search-input2">
 				<input type="text" placeholder="Busca obras y artistas" />
 				<i class="bi_interface-search search-btn"></i>
@@ -88,7 +88,7 @@
 				</tr>
 			</table>
 		</div>
-		<div class="right-menu">
+		<div class="right-mobile-menu">
 
 			<table class="options u-margin-top-10" style="margin-left: 0px;">
 				<tr>
