add closed mobile menu

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -587,6 +587,9 @@ white = #fff
 			.user-menu
 				display block
 
+	.am-Signin-button
+		margin-left 15px
+
 
 .am-header-mobile
 	display flex
@@ -706,6 +709,7 @@ white = #fff
 			background rgba(black, .5)
 			z-index 3
 			display none
+			cursor pointer
 
 .body.open-left
 	.left-mobile-menu
