--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -190,6 +190,11 @@
 			$('.body').removeClass('open-left')
 			$('.body').toggleClass('open-right')
 		})
+
+		$('.body-inner .cover').click(function () {
+			$('.body').removeClass('open-right')
+			$('.body').removeClass('open-left')
+		})
 	});
 	</script>
 
