--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -9,7 +9,7 @@
 			<header class="am-Header-new">
 
 				<div class="am-Header-new-left">
-					<a href="#">
+					<a href="/">
 						<img class="logo" src="/img/logo.png">
 					</a>
 					<div class="search">
@@ -30,13 +30,13 @@
 						<a href="/collections/category/all/page-1?order=popularity">COLECCIONES</a>
 					</ul>
 
-					<ul class="socials">
+					<!-- <ul class="socials">
 						<a href="/user/{{user.username}}/work/add" class="upload">SUBIR</a>
 						<a href="#" class="notif"></a>
 						<a href="#" class="cart"></a>
-					</ul>
+					</ul> -->
 
-					<div class="avatar">
+					<!-- <div class="avatar">
 						<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
 						<i class="fa fa-caret-down"></i>
 						<div class="user-menu" style="top: -8px;">
@@ -48,7 +48,11 @@
 							<div class="u-separator"></div>
 							<a href="/auth/logout" class="user-menu-item">SALIR</a>
 						</div>
-					</div>
+					</div> -->
+
+					<a class="am-Signin-button">
+						<i class="bi_user-single-a"></i> INGRESAR
+					</a>
 				</div>
 
 			</header>
@@ -64,7 +68,7 @@
 			<div class="bars">
 				<i class="fa fa-bars"></i>
 			</div>
-			<a href="#">
+			<a href="/">
 				<img class="logo" src="/img/logo.png">
 			</a>
 		</div>
