--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -64,7 +64,7 @@
 			<table class="options u-margin-top-10">
 				<tr>
 					<td></td>
-					<td><a href="#">ART FEED</a></td>
+					<td><a href="/feed">ART FEED</a></td>
 				</tr>
 				<tr>
 					<td></td>
@@ -72,24 +72,27 @@
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="#">ARTISTAS</a></td>
+					<td><a href="/works/category/all/page-1/?order=popularity">OBRAS</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="#">COLECCIONES</a></td>
+					<td><a href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td><a href="/collections/category/all/page-1?order=popularity">COLECCIONES</a></td>
 				</tr>
 				<tr>
 					<td><i class="bi_interface-plus"></i></td>
-					<td><a href="#">SUBIR</a></td>
+					<td><a href="/user/{{user.username}}/work/add">SUBIR</a></td>
 				</tr>
 				<tr>
 					<td><i class="bi_interface-bell-a"></i></td>
-					<td><a href="#">NOTIFICACIONES <span>29</span></a></td>
+					<td><a href="/user/{{user.username}}/notifications">NOTIFICACIONES <span>29</span></a></td>
 				</tr>
 			</table>
 		</div>
 		<div class="right-mobile-menu">
-
 			<table class="options u-margin-top-10" style="margin-left: 0px;">
 				<tr>
 					<td></td>
@@ -97,19 +100,19 @@
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="#">MI PORTAFOLIO</a></td>
+					<td><a href="/user/{{user.username}}">MI PORTAFOLIO</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="#">DATOS DE PERFIL</a></td>
+					<td><a href="/user/{{user.username}}/work/add">DATOS DE PERFIL</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="#">ADMINISTRAR CUENTA</a></td>
+					<td><a href="/user/{{user.username}}/account">ADMINISTRAR CUENTA</a></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td><a href="#">SALIR</a></td>
+					<td><a href="/auth/logout">SALIR</a></td>
 				</tr>
 			</table>
 		</div>
