add home banner

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -700,7 +700,7 @@ white = #fff
 		// transform translatex(70%)
 		overflow hidden
 		transition transform .3s
-		.cover
+		>.cover
 			position absolute
 			left 0
 			right 0
@@ -716,7 +716,7 @@ white = #fff
 		transform translateX(0)
 	.body-inner
 		transform translatex(70%)
-		.cover
+		>.cover
 			display block
 
 .body.open-right
@@ -724,7 +724,7 @@ white = #fff
 		transform translateX(0)
 	.body-inner
 		transform translatex(-70%)
-		.cover
+		>.cover
 			display block
 
 
