--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -9,7 +9,8 @@
 		<div class="grid-100">
 			<section class="slider">
 				<div class="slider-items">
-					<div class="slider-item js-slide" style="background-image: url('/img/slider/slider 1.png')">
+					<!-- <div class="slider-item js-slide" style="background-image: url('/img/slider/slider 1.png')"> -->
+					<img src="/img/banners/banner-1.jpg">
 						<div class="slider-item-inner">
 							<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
 							<p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p>
