--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -22,13 +22,11 @@
 					<div class="slider-item js-slide"><img src="/img/slide-large4.jpg"></div>
 					<div class="slider-item js-slide"><img src="/img/slide-large5.jpg"></div> -->
 				</div>
-				<div class="slider-nav">
+				<!-- <div class="slider-nav">
 					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-					<!-- <i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i> -->
-				</div>
+				</div> -->
 			</section>
 		</div>
 	</div>
